--- a/.github/workflows/ci-dockertag2.yml
+++ b/.github/workflows/ci-dockertag2.yml
@@ -1,4 +1,3 @@
-
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
@@ -43,15 +42,14 @@ jobs:
 
     - name: Build and push
       id: docker_build
-      env:
-       IMAGE_TAG: ${{ github.sha }}
       uses: docker/build-push-action@v2
       with:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/gitdemo:$IMAGE_TAG
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/gitdemo:v1.0
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
     
+
